--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "colors": "^1.4.0",
         "cookie-parser": "^1.4.5",
         "crypto": "^1.0.1",
         "dotenv": "^8.2.0",
